# bookStoreScraper

./: .env.example  .gitignore  README.md  configs.py  pyproject.toml  requirements.txt
bookScrape/: configs.py  main.py  requirements.txt  run_spiders.py  scrapy.cfg
bookScrape/bookScrape/: items.py  middlewares.py  pipelines.py  settings.py
bookScrape/bookScrape/spiders/: bookSpider.py  shopSpider.py
docs/: configuration.md  items.md  middlewares.md  pipelines.md  spiders.md
