[project]
name = "bookstorescraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==25.4.0",
    "automat==25.4.16",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "constantly==23.10.4",
    "cryptography==46.0.3",
    "cssselect==1.3.0",
    "defusedxml==0.7.1",
    "dotenv==0.9.9",
    "filelock==3.20.1",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "itemadapter==0.13.0",
    "itemloaders==1.3.2",
    "jmespath==1.0.1",
    "lxml==6.0.2",
    "multipart==1.3.0",
    "mysql-connector-python==9.5.0",
    "packaging==25.0",
    "parsel==1.10.0",
    "protego==0.5.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydispatcher==2.0.7",
    "pyopenssl==25.3.0",
    "python-dotenv==1.2.1",
    "queuelib==1.8.0",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "scrapy==2.13.4",
    "service-identity==24.2.0",
    "tldextract==5.3.0",
    "treq==25.5.0",
    "twisted==25.5.0",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "w3lib==2.3.1",
    "zope-interface==8.1.1",
]
